force-app/main/default/objects/Document_Template__c/Document_Template__c.object-meta.xml
<CustomObject>
    <label>Document_Template</label>
    <nameField>
        <label>Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document_Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>