force-app/main/default/objects/Document_Template__c/fields/Action_Binding__c.field-meta.xml
<CustomField>
    <fullName>Action_Binding__c</fullName>
    <description>Specifies which system actions this document template is bound to. Only templates matching the action will appear in that context.</description>
    <label>Action Binding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demand Raiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>