force-app/main/default/objects/Document_Template__c/fields/Display_Context__c.field-meta.xml
<CustomField>
    <fullName>Display_Context__c</fullName>
    <description>Controls where this template is available: Email only, Document Viewer only, or Both.</description>
    <label>Display Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Document Viewer</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>