force-app/main/default/objects/Document_Template__c/fields/File_Name_Pattern__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Pattern__c</fullName>
    <label>File Name Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>