force-app/main/default/objects/Document_Template__c/fields/Include_Related_Lists__c.field-meta.xml
<CustomField>
    <fullName>Include_Related_Lists__c</fullName>
    <label>Include Related Lists</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>