force-app/main/default/objects/Document_Template__c/fields/Page_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Page_Orientation__c</fullName>
    <defaultValue>&quot;portrait&quot;</defaultValue>
    <label>Page Orientation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>