force-app/main/default/objects/Document_Template__c/fields/Template_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Content_Document_Id__c</fullName>
    <description>ContentDocument ID storing the template JSON file. Used instead of Template_JSON__c for large templates.</description>
    <label>Template Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>