force-app/main/default/objects/Document_Template__c/fields/Template_HTML__c.field-meta.xml
<CustomField>
    <fullName>Template_HTML__c</fullName>
    <label>Template HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>